# posets

./: .gitignore  CITATION.cff  README.md  meson.build
.github/workflows/: main.yml
include/: meson.build
include/posets/: downsets.hh
include/posets/downsets/: sharingtrie_backed.hh
include/posets/utils/: kdtree.hh  sharingtree.hh  sharingtrie.hh
tests/: downset-bm.cc  lcrstests.cc  meson.build  tests.cc
